Adjust phone mockup dimensions and styles

--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
         }
 
         .phone-mockup {
-            aspect-ratio: 9/16;
-            max-width: 500px;
+            aspect-ratio: 9 / 19.5;
+            width: 360px;          /* THIS is what actually makes it larger */
             margin: 0 auto;
             background: var(--bg-tertiary);
-            border-radius: 40px;
+            border-radius: 48px;
             border: 4px solid var(--border);
             display: flex;
             align-items: center;
@@ -362,6 +362,7 @@
             position: relative;
             overflow: hidden;
         }
+
 
         .phone-inner-dot {
             width: 40px;
