--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
             <p>We may update this Privacy Policy from time to time. Any changes will be reflected in the app and on this page with an updated revision date.</p>
 
             <h2>Contact Us</h2>
-            <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:support@lyvoapp.com">support@lyvoapp.com</a></p>
+            <p>If you have any questions about this Privacy Policy, please contact us at <a href="mailto:support@bestdaylabs.com">support@bestdaylabs.com</a></p>
         </section>
     </div>
 
