--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
             <p>We reserve the right to modify these terms at any time. Continued use of the app after changes constitutes acceptance of the new terms.</p>
 
             <h2>Contact</h2>
-            <p>For questions about these Terms of Service, please contact us at <a href="mailto:support@lyvoapp.com">support@lyvoapp.com</a></p>
+            <p>For questions about these Terms of Service, please contact us at <a href="mailto:support@bestdaylabs.com">support@bestdaylabs.com</a></p>
         </section>
     </div>
 
@@ -793,12 +793,12 @@
             <div class="support-card">
                 <h2>Get in Touch</h2>
                 <p>Have a question, suggestion, or running into an issue? We'd love to hear from you. We typically respond within 24-48 hours.</p>
-                <a href="mailto:support@lyvoapp.com" class="support-email">
+                <a href="mailto:support@bestdaylabs.com" class="support-email">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                         <polyline points="22,6 12,13 2,6"></polyline>
                     </svg>
-                    support@lyvoapp.com
+                    support@bestdaylabs.com
                 </a>
             </div>
 
